Added my resume to my website

--- a/source/Makefile
+++ b/source/Makefile
@@ -27,10 +27,13 @@ MDHTML		= 	-f markdown -t html -s \
 				--include-after=${FOOTER} \
 				--highlight-style=breezedark
 
+RESUME_FILE	= resume_amlesh_sivanantham.pdf
+RESUME_SRC	= ../.__resume__/amlesh_curriculum_vitae.pdf
+
 ########################################################
 
 # Specify all the files that we build here
-all: ${PAGES} ${BLOG}
+all: ${PAGES} ${BLOG} ${RESUME_FILE}
 
 # How to build all the html files
 %.html : %.md ${TEMPLATE} ${HEADER} ${FOOTER}
@@ -44,7 +47,10 @@ ${BLOG}: blogupdate ${BLOGMD} ${TEMPLATE} ${HEADER} ${FOOTER}
 blogupdate:
 	+${MAKE} ${MAKEARGS} ${BLOG_DIR}
 
-# Remove the html files
+${RESUME_FILE}: ${RESUME_SRC}
+	cp ${RESUME_SRC} ${RESUME_FILE}
+
+# Remove the html files and any other files
 clean:
 	+${MAKE} ${MAKEARGS} ${BLOG_DIR} clean
-	- rm ${PAGES} ${BLOG}
+	- rm ${PAGES} ${BLOG} ${RESUME_FILE}
